# cryptopals-cryptography-cracks

./: Cargo.toml  README.md
src/: lib.rs  set_1_basics.rs  set_2_block_crypto.rs  utils.rs
src/set_1_basics/: c1_convert_hex_to_base64.rs  c2_fixed_xor.rs  c3_single_byte_xor_cypher.rs  c4_detect_single_char_xor.rs  c5_repeating_key_xor.rs  c6_break_repeating_key_xor.rs  c7_aes_in_ecb_mode.rs  c8_detect_aes_in_ecb_mode.rs  convert_hex_to_base64.rs  fixed_xor.rs  single_byte_xor_cypher.rs
src/set_2_block_crypto/: c10_implement_cbc_mode.rs  c11_ecb_cbc_detection_oracle.rs  c12_byte_at_a_time_ecb_decryption.rs  c13_ecb_cut_and_paste.rs  c14_byte_at_a_time_ecb_decryption.rs  c15_pkcs7_padding_validation.rs  c16_cbc_bitflipping_attacks.rs  c9_implement_pkcs_padding.rs
src/set_5_diffie_hellman_and_friends/: c33_implement_diffie_hellman.rs  c34_implement_mitm_key_fixing.rs  c35_dh_malicious_g.rs  mod.rs
src/utils/: aes.rs  bitwise.rs  diffie_hellman.rs  hamming_distance.rs  letter_freq_test.rs  sha.rs
