[package]
name = "cryptopals-crypto-challenges"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
hex = "0.4.3"
base64 = "0.13.0"
aes = "0.7.5"
block-modes = "0.8.1"
num-bigint = "0.4.3"
num-traits = "0.2.15"